# rolch

./: .gitignore  404.html  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  example copy.ipynb  example.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_high_level.txt  requirements_tests.txt
.github/PULL_REQUEST_TEMPLATE/: _config.yaml  new_distribution.md  other_pr.md
.github/workflows/: ci.yml  ci_build_docs.yml  ci_run_tests.yml  ci_run_tests_deps.yml  ci_run_tests_os.yml  test.yml
coordinate_descent/: index.html
development/: index.html  scaler.py  scaler_test_forget.py
distributions/: index.html
docs/: coordinate_descent.md  development.md  distributions.md  estimators.md  estimators_and_methods.md  gram.md  index.md  links.md  mathjaxhelper.js  methods.md  model_selection.md  modeling_tips.md  reference.md  scaler.md
docs/presentations/: isf.html
docs/stylesheets/: extra.css
estimators/: index.html
estimators_and_methods/: index.html
experiments/copula/: dv_bivariate_fit.py  dv_bivariate_marginal_copula_fit.py  dv_bivariate_oil_gas_fit.py  dv_experiments_ondil.py  dv_scores.py  generate_vatter_nagler.r  get_data_oil_gas.R  merged_data_1.csv
gram/: index.html
links/: index.html
methods/: index.html
model_selection/: index.html
modeling_tips/: index.html
presentations/: isf.html
scaler/: index.html
search/: search_index.json
src/ondil/: __init__.py  coordinate_descent.py  design_matrix.py  error.py  information_criteria.py  scaler.py  types.py  utils.py  validation.py  warnings.py
src/ondil/base/: __init__.py  distribution.py  estimator.py  link.py
src/ondil/distributions/: __init__.py  beta.py  betainflated.py  betainflatedzero.py  bicop_normal.py  bicop_studentt.py  exponential.py  gamma.py  gumbel.py  inversegamma.py  inversegaussian.py  johnsonsu.py  logistic.py  lognormal.py  lognormalmedian.py  mv_marg_cop.py  mv_normal_chol.py  mv_normal_low_rank.py  mv_t_chol.py  mv_t_low_rank.py  normal.py  powerexponential.py  reversegumbel.py  skewt1.py  studentt.py  zeroadjustedgamma.py
src/ondil/estimators/: __init__.py  online_gamlss.py  online_lasso.py  online_linear_model.py  online_mvdistreg.py
src/ondil/link/: __init__.py  copulalinks.py  identitylinks.py  logitlinks.py  loglinks.py  matrixlinks.py
src/ondil/links/: __init__.py  copulalinks.py  identitylinks.py  logitlinks.py  loglinks.py  matrixlinks.py  softpluslinks.py  sqrtlinks.py
src/ondil/methods/: __init__.py  elasticnet.py  factory.py  lasso_path.py  recursive_least_squares.py  ridge.py
src/rolch/: __init__.py  abc.py  coordinate_descent.py  gram.py  information_criteria.py  link.py  online_gamlss.py  online_lasso.py  scaler.py  stats.py  utils.py
src/rolch/base/: __init__.py  distribution.py  effects.py  estimation_method.py  estimator.py  link.py  scipymixin.py
src/rolch/design_matrix/: __init__.py  autoregressive_effects.py
src/rolch/distributions/: __init__.py  beta.py  exponential.py  gamma.py  johnsonsu.py  logistic.py  lognormal.py  lognormal2.py  lognormalmedian.py  normal.py  studentt.py
src/rolch/estimators/: __init__.py  online_gamlss.py  online_lasso.py  online_linear_model.py
src/rolch/link/: __init__.py  generic.py  logitlinks.py  loglinks.py  robust_math.py  sigmoidlinks.py  softpluslinks.py  sqrtlinks.py
src/rolch/links/: __init__.py  loglinks.py  robust_math.py
src/rolch/methods/: __init__.py  elasticnet.py  factory.py  lasso_path.py  path.py  (+3 more)
tests/: test_coordinate_descent.py  test_distributions.py  test_distributions_gamma.py  test_distributions_johnsonsu.py  test_distributions_normal.py  test_distributions_studentt.py  test_gram.py  test_import.py  test_incremental_mean.py  test_link_functions.py  test_online_gamlss.py  test_online_scaler.py  test_online_scaler2.py  test_python_against_r.py  test_sklearn.py  utils.py
tests/distributions/: test_coefs.py  test_derivatives.py  test_dist.py  test_properties.py  utils.py
(+33 files in other folders)
