[build-system]
requires = [
    "setuptools>=70.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "rolch"
version = "0.1.10"
authors = [
  {name="Simon Hirsch", email="simon.hirsch@stud.uni-due.de"},
  {name="Jonathan Berrisch", email="jonathan.berrisch@uni-due.de"},
  {name="Florian Ziel", email="florian.ziel@uni-due.de"}
]
description = "Methods for online / incremental estimation of distributional regression models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    "scipy >= 1.00, <2.0.0",
    "numpy >= 1.2, <2.0.0",
    "numba >= 0.59.1, < 1.0.0"
]

[project.optional-dependencies]
pandas = ["pandas >= 1.26"]
polars = ["polars"]
all = ["rolch[pandas, polars]"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/simon-hirsch/rolch"